[gd_scene load_steps=9 format=3 uid="uid://cstu3yr1usjqk"]

[ext_resource type="Script" uid="uid://b7met5e1cvei2" path="res://scenery/orb.gd" id="1_555lk"]
[ext_resource type="AudioStream" uid="uid://c778hhyjvm6rp" path="res://sounds/orb_sound.wav" id="2_555lk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_555lk"]
albedo_color = Color(1, 0.843137, 0, 1)
emission_enabled = true
emission = Color(1, 0.843137, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="SphereMesh" id="SphereMesh_3df22"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bb8wj"]

[sub_resource type="Animation" id="Animation_3df22"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_555lk"]
resource_name = "orb"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5), Vector3(1.5, 1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb8wj"]
_data = {
&"RESET": SubResource("Animation_3df22"),
&"orb": SubResource("Animation_555lk")
}

[node name="orb" type="Area3D"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
script = ExtResource("1_555lk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.00389023, -9.53674e-08, -0.00273876)
material_override = SubResource("StandardMaterial3D_555lk")
cast_shadow = 0
mesh = SubResource("SphereMesh_3df22")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
shape = SubResource("SphereShape3D_bb8wj")

[node name="orb_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_555lk")
volume_db = 5.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bb8wj")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="orb_sound" to="." method="_on_orb_sound_finished"]
